--- a/src/components/Homepage/major.css
+++ b/src/components/Homepage/major.css
@@ -3,3 +3,8 @@
   display: grid;
   grid-template-columns: 25% 50% 25%;
 }
+@media only screen and (max-width: 600px) {
+  .major {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+}
